# nes_cpp

./: CMakeLists.txt  README.md
src/: bus.cpp  bus.h  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  joypad.cpp  joypad.h  main.cpp  mem.h  opcodes.cpp  opcodes.h  trace.cpp  trace.h
src/ppu/: ppu.cpp  ppu.h
src/ppu/registers/: addr.cpp  addr.h  control.cpp  control.h  mask.cpp  mask.h  scroll.cpp  scroll.h  status.cpp  status.h
src/render/: frame.cpp  frame.h  palette.cpp  palette.h  render.cpp  render.h
